--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "firebase-paginator",
+  "name": "bizboard-firebase-paginator",
   "version": "1.0.16",
-  "description": "Pagination for Firebase",
-  "main": "firebase-paginator.js",
+  "description": "For of the original Firebase Paginator",
+  "main": "bizboard-firebase-paginator.js",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -16,12 +16,12 @@
     "firebase",
     "pagination"
   ],
-  "author": "Chris Esplin <chris@quiver.is>",
+  "author": "Karl Lundfall <karl@bizboard.nl>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/deltaepsilon/firebase-paginator/issues"
   },
-  "homepage": "https://github.com/deltaepsilon/firebase-paginator",
+  "homepage": "https://github.com/Bizboard/firebase-paginator",
   "dependencies": {
     "axios": "^0.13.1",
     "firebase-admin": "^4.2.1"
